--- a/chat.html
+++ b/chat.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BEARTALK - 채팅방</title>
     <script src="https://kit.fontawesome.com/f506734a62.js"></script>
-
+    <link rel="icon" href="img/favicon.png" />
     <link rel="stylesheet" href="css/main.css" />
-    <script defer src="js/main.js"></script>
+    <script defer src="main.js"></script>
   </head>
   <body class="sub">
     <main class="chat">
