--- a/chatList.html
+++ b/chatList.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BEARTALK - 채팅 목록</title>
+    <link rel="icon" href="img/favicon.png" />
     <script src="https://kit.fontawesome.com/f506734a62.js"></script>
-
     <link rel="stylesheet" href="css/main.css" />
-    <script defer src="js/main.js"></script>
   </head>
   <body class="sub">
     <section>
